[project]
name = "mathieu-lemay-cv"
version = "0.1.0"
description = "CV of Mathieu Lemay"
authors = [
    {name = "Mathieu Lemay",email = "acidrain1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rendercv[full] (>=2.2,<3.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
